--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <p class="kicker">Tell us about your property and goals. We’ll follow up with a custom proposal.</p>
       </div>
       <!-- Using formsubmit.co so submissions go straight to email without a backend -->
-      <form id="contactForm" action="https://formsubmit.co/forterealestatenc@gmail.com" method="POST">
+      <form id="contactForm" action="https://formsubmit.co/2acc3430b7f2a32fef804ddc48adef9f" method="POST">
         <!-- FormSubmit options -->
         <input type="hidden" name="_subject" value="New Inquiry — Forte Real Estate NC" />
         <input type="hidden" name="_captcha" value="false" />
