Trying to get thanks working

--- a/index.html
+++ b/index.html
@@ -352,8 +352,7 @@
         <input type="hidden" name="_subject" value="New Inquiry — Forte Real Estate NC" />
         <input type="hidden" name="_captcha" value="false" />
         <input type="hidden" name="_template" value="box" />
-        <!-- When you publish on GitHub Pages, replace _next with your live URL + #thanks -->
-        <input type="hidden" name="_next" value="#thanks" />
+        <input type="hidden" name="_next" value="https://nfarve.github.io/Forte-real-estate-nc#thanks" />
 
         <div class="two-col">
           <div>
@@ -375,7 +374,7 @@
             <select id="propertyType" name="property_type">
               <option value="Single-Family">Single-Family</option>
               <option value="Multi-Family">Multi-Family</option>
-              <option value="Short-Term Rental">Short-Term Rental</option>
+              <option value="Short-Term Rental">Short-Term </option>
               <option value="Medium-Term Rental">Medium-Term Rental</option>
               <option value="Other">Other</option>
             </select>
@@ -388,6 +387,7 @@
         <!-- Honeypot -->
         <input type="text" name="_honey" class="hidden" tabindex="-1" autocomplete="off" />
         <button class="btn btn-primary" type="submit">Send Message</button>
+        <div id="form-banner" style="display:none; padding:10px; background-color:#dfe7df; color:#2f4f2f; text-align:center; margin-top:20px;">Form submitted</div>
         <p id="thanks" class="muted hidden" style="margin-top:10px">Thanks! Your message has been sent. We’ll be in touch shortly.</p>
       </form>
     </div>
